# adsfcr

./: README.md  pyproject.toml
src/: ch1_section_1_1_ex_1.py  ch1_section_1_2_ex_1.py  ch1_section_1_3_ex_1.py  ch1_section_1_4_ex_1.py  ch2_section_1_1_ex_1.py  ch2_section_1_1_ex_2.py  ch2_section_1_1_ex_3.py  ch2_section_2_1_ex_1.py  ch2_section_2_1_ex_2.py  ch2_section_2_1_ex_3.py  ch2_section_2_1_ex_4.py  ch2_section_2_1_ex_5.py  ch2_section_2_2_ex_1.py  ch2_section_2_2_ex_2.py  ch2_section_2_2_ex_3.py  ch2_section_2_2_ex_4.py  ch2_section_2_2_ex_5.py  ch2_section_2_3_ex_1.py  ch2_section_2_3_ex_2.py  ch2_section_2_3_ex_3.py  ch2_section_2_3_ex_4.py  ch2_section_2_3_ex_5.py  ch2_section_2_3_ex_6.py  ch2_section_2_3_ex_7.py  ch2_section_2_3_ex_8.py  ch2_section_2_3_ex_9.py  ch2_section_2_4_ex_1.py  ch2_section_2_5_ex_1.py  ch2_section_2_6_ex_1.py  ch2_section_2_6_ex_10.py  ch2_section_2_6_ex_2.py  ch2_section_2_6_ex_3.py  ch2_section_2_6_ex_4.py  ch2_section_2_6_ex_5.py  ch2_section_2_6_ex_6.py  ch2_section_2_6_ex_7.py  ch2_section_2_6_ex_8.py  ch2_section_2_6_ex_9.py  ch3_section_3_1_ex_1.py  ch3_section_3_1_ex_2.py  (+3 more)
