[tool.poetry]
name = "adsfcr"
version = "0.1.0"
description = ""
authors = ["oliveiraphm <oliveiraphm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
numpy = "^2.1.3"
pandas = "^2.2.3"
scipy = "^1.14.1"
statsmodels = "^0.14.4"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
